# Delta_ByteTracker

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
src/delta_tracker/tools/: demo_track.py  track.py
src/delta_tracker/yolox/motdt_tracker/: reid_model.py
